--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@gsap/react": "^2.1.0",
     "@react-three/drei": "^9.101.0",
     "@react-three/fiber": "^8.15.19",
-    "@sentry/react": "^7.106.0",
+    "@sentry/react": "^7.120.3",
+    "@sentry/tracing": "^7.120.3",
     "@sentry/vite-plugin": "^2.14.3",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
